testsuite/tests/patsyn/should_fail/all.T

test('mono', normal, compile_fail, [''])
test('unidir', normal, compile_fail, [''])
